src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities{
  .feature-gradient {
    @apply bg-grey-blue;
    background: radial-gradient(farthest-corner at 37px 82px,#355f70 0,#0d2a35 42%);
  }
  .footer-gradient {
    background: radial-gradient(circle at left center , #294e61 0,#0f2c3a 35%);
  }
  .footer-gradient-sm {
    background: radial-gradient(circle at left top , #294e61 0,#0f2c3a 55%);
  }
  .hero-gradient{
    background: radial-gradient(circle at right top , #294e61 0,#0f2c3a 55%);
  }
  .main-bg {
    @apply bg-grey-blue bg-mainBg;
    
  }
  .floating-assets-gradient {
    background: linear-gradient(142deg, #FEF8FF 1.8%, rgba(254, 248, 255, 0.49) 99.75%)
  }

  .nav-underline{
      @apply relative after:absolute after:h-[2px] after:bg-light-orange after:w-full after:bottom-0 after:left-0;
  }

  .striped-bg{
    background: repeating-linear-gradient(135deg, #102e3c1a, #102e3c1a 2px, transparent 0px, transparent 10px )
  }
}

html {
  color-scheme: dark;
}

